# jjfy

./: README.md  pyproject.toml  vue.md
api/: urls.py  views.py
back/: pyproject.toml
back/api/: externDB.py  urls.py  views.py
back/eval/: eval.py  generate_dict_main.py  model_score_cal_main.py  question_2.py  question_2_main.py  test_case.py  weight_calc_method.py  weight_calc_method_main.py  weight_utils.py  weight_utils_main.py
back/mysite/: settings.py
back/sqlER/: __init__.py  main.py  try.py
back/sqlER/ERDiagram/: ERDiagram.py  __init__.py
back/sqlER/connection/: connection.py
dev/: README.md  pnpm-lock.yaml
docs/入门指南/: 1概述.md  2快速开始.md  3项目结构.md  4环境配置.md  5数据输入格式.md
docs/深入探讨/Django后端集成/: API端点概述.md  ER图生成.md  数据库连接管理.md
docs/深入探讨/数据处理工具/: 基于模块的评分系统.md  评分计算方法.md  问卷拆分逻辑.md
docs/深入探讨/权重计算方法/: BWM方法实现.md  权重聚合策略.md  熵权法.md
docs/深入探讨/核心评估引擎/: 权重计算方法.md  评估流水线架构.md  问卷处理方法.md
front/: pnpm-lock.yaml  vite.config.js
front/src/: App.vue
front/src/components/: Home.vue
front/src/router/: index.js
front/src/views/: DataManage.vue
mysite/: settings.py  urls.py
vue-project/: package.json  pnpm-lock.yaml  vite.config.ts
vue-project/src/components/: CommonAside.vue
vue-project/src/data/: MainMenu.ts
vue-project/src/store/: index.ts
vue-project/src/views/: HomeView.vue
