[project]
name = "jjfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=5.2.4",
  "flask>=3.1.1",
  "graphviz>=0.21",
  "pyodbc>=5.2.0",
]

# dependencies = ["django>=4.2.21", "mariadb>=1.1.12", "ruff>=0.11.10"]


[tool.pyright]
venvPath = "."
venv = ".venv"
