[project]
name = "jjfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "django>=5.2.4",
  "flask>=3.1.1",
  "graphviz>=0.21",
  "gunicorn>=23.0.0",
  "numpy>=2.2.6",
  "pyodbc>=5.2.0",
  "scipy>=1.15.3",
  "uvicorn>=0.37.0",
  "uvicorn-worker>=0.4.0",
]


[tool.pyright]
venvPath = "."
venv = ".venv"
